// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div
  className="day"
  onClick={[Function]}
>
  1
</div>
`;

exports[`should render correctly with given className 1`] = `
<div
  className="day my-class"
  onClick={[Function]}
>
  1
</div>
`;

exports[`should render correctly with text date value 1`] = `
<div
  className="day"
  onClick={[Function]}
>
  Thu
</div>
`;
